# budget_app

./: .env.example  .gitignore  DEBUGGING_HTTPS.md  Dockerfile  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_READY.md  MONTHLY_BUDGET_SUMMARY.md  README.md  SECURITY.md  TESTING_QUICK_START.md  app.js  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt  setup-pre-commit.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_comprehensive_initial.py  001_initial_schema_and_seed.py  002_add_is_recurring.py  003_add_recurring_charges.py  004_add_password_set.py  005_add_child_user_and_expenses.py  006_make_assigned_to_nullable.py  007_add_child_monthly_budgets.py  008_add_budget_carryover.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  accounts.py  auth.py  categories.py  child_expenses.py  (+5 more)
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  account.py  category.py  child_expense.py  child_monthly_budget.py  expense.py  project.py  recurring_charge.py  user.py
backend/app/schemas/: __init__.py  account.py  category.py  child_expense.py  child_monthly_budget.py  expense.py  project.py  recurring_charge.py  stats.py  user.py
backend/app/services/: account.py  category.py  child_expense.py  child_monthly_budget.py  email.py  expense.py  project.py  recurring_charge.py  user.py
backend/tests/: conftest.py  test_auth.py  test_expenses.py
(+121 files in other folders)
